--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ urllib3 = "^1.26.8"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.12b0", allow-prereleases = true}
+tox = "^3.24.5"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
