--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,3 @@
 psycopg2-binary==2.9.3; python_version >= "3.6"
+python-dotenv==0.19.2; python_version >= "3.5"
+urllib3==1.26.8; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
