--- a/tf/build.toml
+++ b/tf/build.toml
@@ -7,6 +7,6 @@ runtime = "python3.9"
 architecture = "x86_64"
 manifest_hash = ""
 packagetype = "Zip"
-functions = ["lambdaprober"]
+functions = ["prober"]
 
 [layer_build_definitions]
